@@ -44,7 +44,7 @@ public class RowDataUtilTest extends TestCase {
   }
 
   public void testResizeArray() throws KettleValueException {
-    Object[] arr1 = new Object[] { "test", Boolean.TRUE, new Long( 100 ), new Long( 101 ), new String( "test1" ) };
+    Object[] arr1 = new Object[] { "test", Boolean.TRUE, Long.valueOf( 100 ), Long.valueOf( 101 ), new String( "test1" ) };
     Object[] nullArr =
       new Object[] {
         null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null };
@@ -70,24 +70,24 @@ public class RowDataUtilTest extends TestCase {
   }
 
   public void testRemoveItem() throws KettleValueException {
-    Object[] arr = new Object[] { new Long( 1L ), new Long( 2L ), new Long( 3L ), new Long( 4L ), new Long( 5L ) };
+    Object[] arr = new Object[] { Long.valueOf( 1L ), Long.valueOf( 2L ), Long.valueOf( 3L ), Long.valueOf( 4L ), Long.valueOf( 5L ) };
 
     // Remove the first item
-    Object[] comp1 = new Object[] { new Long( 2L ), new Long( 3L ), new Long( 4L ), new Long( 5L ) };
+    Object[] comp1 = new Object[] { Long.valueOf( 2L ), Long.valueOf( 3L ), Long.valueOf( 4L ), Long.valueOf( 5L ) };
     Object[] newArr1 = RowDataUtil.removeItem( arr, 0 );
     assertTrue( newArr1.length == comp1.length );
     assertTrue( newArr1.length == arr.length - 1 );
     assertTrue( arrayCompare( newArr1, 0, comp1, 0, newArr1.length ) );
 
     // Remove the last item
-    Object[] comp2 = new Object[] { new Long( 2L ), new Long( 3L ), new Long( 4L ) };
+    Object[] comp2 = new Object[] { Long.valueOf( 2L ), Long.valueOf( 3L ), Long.valueOf( 4L ) };
     Object[] newArr2 = RowDataUtil.removeItem( newArr1, newArr1.length - 1 );
     assertTrue( newArr2.length == arr.length - 2 );
     assertTrue( newArr2.length == comp2.length );
     assertTrue( arrayCompare( newArr2, 0, comp2, 0, newArr2.length ) );
 
     // Remove in the middle
-    Object[] comp3 = new Object[] { new Long( 2L ), new Long( 4L ) };
+    Object[] comp3 = new Object[] { Long.valueOf( 2L ), Long.valueOf( 4L ) };
     Object[] newArr3 = RowDataUtil.removeItem( newArr2, 1 );
     assertTrue( newArr3.length == arr.length - 3 );
     assertTrue( newArr3.length == comp3.length );
@@ -103,52 +103,52 @@ public class RowDataUtilTest extends TestCase {
   }
 
   public void testAddRowData() throws KettleValueException {
-    Object[] arr = new Object[] { new Long( 1L ), new Long( 2L ), new Long( 3L ) };
+    Object[] arr = new Object[] { Long.valueOf( 1L ), Long.valueOf( 2L ), Long.valueOf( 3L ) };
 
     // Do all different combinations of adding rows to
     // each other
     Object[] newArr1 =
       RowDataUtil.addRowData(
-        new Object[] {}, 0, new Object[] { new Long( 1L ), new Long( 2L ), new Long( 3L ) } );
+        new Object[] {}, 0, new Object[] { Long.valueOf( 1L ), Long.valueOf( 2L ), Long.valueOf( 3L ) } );
     assertTrue( newArr1.length >= arr.length );
     assertTrue( arrayCompare( newArr1, 0, arr, 0, arr.length ) );
 
     Object[] newArr2 =
       RowDataUtil.addRowData(
-        new Object[] { new Long( 1L ), new Long( 2L ), new Long( 3L ) }, 3, new Object[] {} );
+        new Object[] { Long.valueOf( 1L ), Long.valueOf( 2L ), Long.valueOf( 3L ) }, 3, new Object[] {} );
     assertTrue( newArr2.length >= arr.length );
     assertTrue( arrayCompare( newArr2, 0, arr, 0, arr.length ) );
 
     Object[] newArr3 =
       RowDataUtil.addRowData(
-        new Object[] { new Long( 1L ) }, 1, new Object[] { new Long( 2L ), new Long( 3L ) } );
+        new Object[] { Long.valueOf( 1L ) }, 1, new Object[] { Long.valueOf( 2L ), Long.valueOf( 3L ) } );
     assertTrue( newArr3.length >= arr.length );
     assertTrue( arrayCompare( newArr3, 0, arr, 0, arr.length ) );
 
     Object[] newArr4 =
       RowDataUtil.addRowData(
-        new Object[] { new Long( 1L ), new Long( 2L ) }, 2, new Object[] { new Long( 3L ) } );
+        new Object[] { Long.valueOf( 1L ), Long.valueOf( 2L ) }, 2, new Object[] { Long.valueOf( 3L ) } );
     assertTrue( newArr4.length >= arr.length );
     assertTrue( arrayCompare( newArr4, 0, arr, 0, arr.length ) );
   }
 
   public void testAddValueData() throws KettleValueException {
-    Object[] arr1 = new Object[] { new Long( 1L ) };
-    Object[] arr2 = new Object[] { new Long( 1L ), new Long( 2L ) };
+    Object[] arr1 = new Object[] { Long.valueOf( 1L ) };
+    Object[] arr2 = new Object[] { Long.valueOf( 1L ), Long.valueOf( 2L ) };
 
-    Object[] newArr1 = RowDataUtil.addValueData( new Object[] {}, 0, new Long( 1L ) );
+    Object[] newArr1 = RowDataUtil.addValueData( new Object[] {}, 0, Long.valueOf( 1L ) );
     assertTrue( newArr1.length >= arr1.length );
     assertTrue( arrayCompare( newArr1, 0, arr1, 0, arr1.length ) );
 
-    Object[] newArr2 = RowDataUtil.addValueData( new Object[] { new Long( 1L ) }, 1, new Long( 2L ) );
+    Object[] newArr2 = RowDataUtil.addValueData( new Object[] { Long.valueOf( 1L ) }, 1, Long.valueOf( 2L ) );
     assertTrue( newArr2.length >= arr2.length );
     assertTrue( arrayCompare( newArr2, 0, arr2, 0, arr2.length ) );
   }
 
   public void testRemoveItems() throws KettleValueException {
     Object[] arr1 =
-      new Object[] { new Long( 1L ), new Long( 2L ), new Long( 3L ), new Long( 4L ), new Long( 5L ) };
-    Object[] comp1 = new Object[] { new Long( 2L ), new Long( 4L ) };
+      new Object[] { Long.valueOf( 1L ), Long.valueOf( 2L ), Long.valueOf( 3L ), Long.valueOf( 4L ), Long.valueOf( 5L ) };
+    Object[] comp1 = new Object[] { Long.valueOf( 2L ), Long.valueOf( 4L ) };
 
     Object[] newArr1 = RowDataUtil.removeItems( arr1, new int[] {} );
     assertTrue( newArr1.length == arr1.length );
