@@ -452,8 +452,8 @@ public class ValueMetaFactoryTest {
   @Test
   public void testGuessValueMetaInterface() {
     assertTrue( ValueMetaFactory.guessValueMetaInterface( new BigDecimal( 1.0 ) ) instanceof ValueMetaBigNumber );
-    assertTrue( ValueMetaFactory.guessValueMetaInterface( new Double( 1.0 ) ) instanceof ValueMetaNumber );
-    assertTrue( ValueMetaFactory.guessValueMetaInterface( new Long( 1 ) ) instanceof ValueMetaInteger );
+    assertTrue( ValueMetaFactory.guessValueMetaInterface( Double.valueOf( 1.0 ) ) instanceof ValueMetaNumber );
+    assertTrue( ValueMetaFactory.guessValueMetaInterface( Long.valueOf( 1 ) ) instanceof ValueMetaInteger );
     assertTrue( ValueMetaFactory.guessValueMetaInterface( new String() ) instanceof ValueMetaString );
     assertTrue( ValueMetaFactory.guessValueMetaInterface( new Date() ) instanceof ValueMetaDate );
     assertTrue( ValueMetaFactory.guessValueMetaInterface( new Boolean( false ) ) instanceof ValueMetaBoolean );
