@@ -142,16 +142,16 @@ public class JobEntryEval extends JobEntryBase implements Cloneable, JobEntryInt
     try {
       scope = cx.initStandardObjects( null );
 
-      Long errors = new Long( result.getNrErrors() );
-      Long lines_input = new Long( result.getNrLinesInput() );
-      Long lines_output = new Long( result.getNrLinesOutput() );
-      Long lines_updated = new Long( result.getNrLinesUpdated() );
-      Long lines_rejected = new Long( result.getNrLinesRejected() );
-      Long lines_read = new Long( result.getNrLinesRead() );
-      Long lines_written = new Long( result.getNrLinesWritten() );
-      Long exit_status = new Long( result.getExitStatus() );
-      Long files_retrieved = new Long( result.getNrFilesRetrieved() );
-      Long nr = new Long( result.getEntryNr() );
+      Long errors = Long.valueOf( result.getNrErrors() );
+      Long lines_input = Long.valueOf( result.getNrLinesInput() );
+      Long lines_output = Long.valueOf( result.getNrLinesOutput() );
+      Long lines_updated = Long.valueOf( result.getNrLinesUpdated() );
+      Long lines_rejected = Long.valueOf( result.getNrLinesRejected() );
+      Long lines_read = Long.valueOf( result.getNrLinesRead() );
+      Long lines_written = Long.valueOf( result.getNrLinesWritten() );
+      Long exit_status = Long.valueOf( result.getExitStatus() );
+      Long files_retrieved = Long.valueOf( result.getNrFilesRetrieved() );
+      Long nr = Long.valueOf( result.getEntryNr() );
 
       scope.put( "errors", scope, errors );
       scope.put( "lines_input", scope, lines_input );
