@@ -540,7 +540,7 @@ public class MailInput extends BaseStep implements StepInterface {
 
           switch ( meta.getInputFields()[i].getColumn() ) {
             case MailInputField.COLUMN_MESSAGE_NR:
-              r[index] = new Long( message.getMessageNumber() );
+              r[index] = Long.valueOf( message.getMessageNumber() );
               break;
             case MailInputField.COLUMN_SUBJECT:
               r[index] = message.getSubject();
@@ -575,7 +575,7 @@ public class MailInput extends BaseStep implements StepInterface {
               r[index] = data.mailConn.getFolderName();
               break;
             case MailInputField.COLUMN_SIZE:
-              r[index] = new Long( message.getSize() );
+              r[index] = Long.valueOf( message.getSize() );
               break;
             case MailInputField.COLUMN_FLAG_DRAFT:
               r[index] = new Boolean( data.mailConn.isMessageDraft( message ) );
@@ -593,7 +593,7 @@ public class MailInput extends BaseStep implements StepInterface {
               r[index] = new Boolean( data.mailConn.isMessageDeleted( message ) );
               break;
             case MailInputField.COLUMN_ATTACHED_FILES_COUNT:
-              r[index] = new Long( data.mailConn.getAttachedFilesCount( message, null ) );
+              r[index] = Long.valueOf( data.mailConn.getAttachedFilesCount( message, null ) );
               break;
             case MailInputField.COLUMN_HEADER:
               String name = meta.getInputFields()[i].getName();
