@@ -676,7 +676,7 @@ public class ScriptValuesMetaMod extends BaseStepMeta implements StepMetaInterfa
             valueData = Long.valueOf( 0L );
           }
           if ( valueMeta.isNumber() ) {
-            valueData = new Double( 0.0 );
+            valueData = Double.valueOf( 0.0 );
           }
           if ( valueMeta.isBigNumber() ) {
             valueData = BigDecimal.ZERO;
