@@ -257,7 +257,7 @@ public class SubjectDataBrowserDialog {
     //
     String strNr;
     try {
-      strNr = wFields.getNumberColumn().getValueMeta().getString( new Long( lineNr ) );
+      strNr = wFields.getNumberColumn().getValueMeta().getString( Long.valueOf( lineNr ) );
     } catch ( Exception e ) {
       strNr = Integer.toString( lineNr );
     }
